# gameboy-emulator

./: .clang-format  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  HARDWARE.md  README.md  TESTING.md
.github/workflows/: build-and-release.yml  cmake-multi-platform.yml  doxygen-gh-pages.yml  run-tests.yml
assets/: bootrom-disasm.txt
html/: annotated.html  annotated_dup.js  classes.html  classgb_1_1Gameboy-members.html  classgb_1_1Gameboy.html  classgb_1_1Gameboy.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_bcca2d01bf363ae53c8497130bd96504.html  dir_bcca2d01bf363ae53c8497130bd96504.js  files.html  functions.html  functions_func.html  gameboy_8hpp_source.html  index.html  md_CONTRIBUTING.html  md_HARDWARE.html  md_README.html  md_TESTING.html  navtreedata.js  navtreeindex0.js  pages.html
html/search/: all_0.js  all_1.js  all_5.js  classes_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  pages_0.js  pages_2.js  searchdata.js
latex/: annotated.tex  classgb_1_1Gameboy.tex  files.tex  gameboy_8hpp_source.tex  md_CONTRIBUTING.tex  md_HARDWARE.tex  md_README.tex  md_TESTING.tex  refman.tex
scripts/: quick-run.sh
src/: CMakeLists.txt  main.cpp  types.hpp
src/APU/: CMakeLists.txt  apu.cpp  apu.hpp
src/AddressBus/: CMakeLists.txt  address-bus.cpp  address-bus.hpp
src/CPU/: CMakeLists.txt  cpu.cpp  cpu.hpp  opcodes.hpp  timings.hpp
src/Cartridge/: CMakeLists.txt  cartridge-types.hpp  cartridge.cpp  cartridge.hpp
src/Cartridge/Controllers/: mbc0.hpp  mbc1.hpp  mbc3.hpp
src/Cartridge/RTC/: CMakeLists.txt  rtc.cpp  rtc.hpp
src/Cartridge/controllers/: mbc0.hpp  mbc1.hpp  mbc3.hpp
src/Config/: CMakeLists.txt  config.cpp  config.hpp
src/Engine/: CMakeLists.txt  engine.cpp  engine.hpp
src/Frontend/: CMakeLists.txt  engine.cpp  engine.hpp  frontend.cpp  frontend.hpp
src/GBComponent/: CMakeLists.txt  gb-component.cpp  gb-component.hpp
src/Gameboy/: CMakeLists.txt  gameboy.cpp  gameboy.hpp
src/Graphics/: CMakeLists.txt  graphics.cpp  graphics.hpp
src/Memory/: CMakeLists.txt  bootrom.hpp  memory.cpp  memory.hpp
src/PPU/: CMakeLists.txt  PPU.cpp  PPU.hpp  ppu.cpp  ppu.hpp
src/Processor/: CMakeLists.txt  opcodes.hpp  processor.cpp  processor.hpp  timings.hpp
src/TimerController/: CMakeLists.txt  timer-controller.cpp  timer-controller.hpp
tests/: CMakeLists.txt  address-bus.test.cpp  blargg.test.cpp  cartridge.test.cpp  cpu.test.cpp  frontend.test.cpp  gameboy.test.cpp  ppu.test.cpp  processor.test.cpp  sample.test.cpp  timer-controller.test.cpp
