ADD_EXECUTABLE(emulator main.cpp)

ADD_SUBDIRECTORY(Engine)
ADD_SUBDIRECTORY(Config)
ADD_SUBDIRECTORY(Gameboy)
ADD_SUBDIRECTORY(Processor)
ADD_SUBDIRECTORY(Memory)
ADD_SUBDIRECTORY(Cartridge)
ADD_SUBDIRECTORY(TimerController)
ADD_SUBDIRECTORY(Graphics)

TARGET_LINK_LIBRARIES(emulator Engine Gameboy Graphics)

SET_TARGET_PROPERTIES(
        emulator PROPERTIES
        RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
