ADD_EXECUTABLE(emulator main.cpp)

ADD_SUBDIRECTORY(Engine)
ADD_SUBDIRECTORY(Gameboy)
ADD_SUBDIRECTORY(GBComponent)
ADD_SUBDIRECTORY(Graphics)
ADD_SUBDIRECTORY(CPU)
ADD_SUBDIRECTORY(AddressBus)
ADD_SUBDIRECTORY(TimerController)

TARGET_LINK_LIBRARIES(emulator Engine Gameboy)

SET_TARGET_PROPERTIES(
        emulator PROPERTIES
        RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
